Bug 166813 - installation crashing when using georgian text
Summary: installation crashing when using georgian text
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Installation (show other bugs)
Version:
(earliest affected)
25.2.3.2 release
Hardware: All Windows (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-01 09:46 UTC by Andria Gadelia
Modified: 2025-07-10 16:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andria Gadelia 2025-06-01 09:46:57 UTC
Description:
if you have your region set to georgia and the regional format to georgian, when trying to install libre office it will be in georgian. but clicking "next" crashes the installation.

i've solved this by changing my region and the regional format to the US

Steps to Reproduce:
1.set region and regional format to georgian
2.launch the installer and press "next" or how it will be written: "შემდეგი"
3.crash

Actual Results:
crash

Expected Results:
install


Reproducible: Always


User Profile Reset: No

Additional Info:
it's a very simple bug, must be a problem with the font or something
Comment 1 Mike Kaganski 2025-06-01 12:23:09 UTC
I kind of repro - except I don't see a crash, but a hang.

Steps:

> msiexec /i C:\D\Downloads\LibreOffice_25.2.4.1_Win_x86-64.msi ProductLanguage=1079

The first press to [შემდეგი >] button hangs it.

Workaround:

> msiexec /i C:\D\Downloads\LibreOffice_25.2.4.1_Win_x86-64.msi ProductLanguage=1033

A guess is, that the problem is in some custom action.
Comment 2 Mike Kaganski 2025-06-01 14:15:21 UTC
Custom actions are irrelevant. The problem is in translation. The likely candidate is the translation of `msgid "{&DialogDefaultBold}Cu&stom"` in

https://git.libreoffice.org/translations/+/2eef7d7960fbabda12f97e17ec9a707cef3a3542/source/ka/instsetoo_native/inc_openoffice/windows/msi_languages.po#4542

that happened in https://git.libreoffice.org/translations/+/fa6c5405a7696a8b954d555a8373058fb4853bd1

The string there

"{&DialogDefaultBold]მომხმარებლი&ს"

has the proper opening brace `{`, but the closing one is square `]`.

I can't fix the translation, nor test my theory. Andras: could you please fix that string? I can't CC the author of the translation change.
Comment 3 Mike Kaganski 2025-06-01 14:47:50 UTC
Oh sorry, I needed to double-check the committer. Christian, could you please fix the string indicated in comment 2?
Comment 4 Christian Lohmaier 2025-07-08 11:32:04 UTC
FYI: translations are managed in weblate at https://translations.documentfoundation.org/ and you can search for key-ID with e.g. note:e8DR4 ( https://translations.documentfoundation.org/search/libo_ui-master/-/ka/?q=+note%3Ae8DR4 )

So I fixed the translation for https://translations.documentfoundation.org/translate/libo_ui-master/instsetoo_nativeinc_openofficewindowsmsi_languages/ka/?checksum=0bb8fdd4d92558a7 

however since that is a translation bug that can crash the installer, our pocheck utility should be enhanced to also catch that error... There's already a check that ensures that trailing | is present in the translation if the source has it, so I guess a check for matching parenthesis should do?
Comment 5 Xisco Faulí 2025-07-08 19:02:36 UTC
I downloaded https://dev-builds.libreoffice.org/daily/master/Win-x86_64@tb77-TDF/current/LibreOfficeDev_26.2.0.0.alpha0_Win_x86-64.msi and using

> msiexec /i C:\D\Downloads\LibreOffice_25.2.4.1_Win_x86-64.msi ProductLanguage=1079

I can verify the issue is fixed
Comment 6 Commit Notification 2025-07-09 16:36:52 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/297dc9b6c52a9a2451c3ac7484ae484b9590fcc3

tdf#166813: improve pocheck script

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2025-07-10 12:19:59 UTC
In 297dc9b6c52a9a2451c3ac7484ae484b9590fcc3 I forgot to add "related" at the beginning since it's not the real fix for it but a mechanism to avoid it from happening in the future. The issue got fixed in comment 4 by Christian. Closing
Comment 8 Commit Notification 2025-07-10 16:13:10 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/6fa6edff1f5191ce3ecb076f99b9320f8108cda8

related tdf#166813: improve pocheck script

It will be available in 25.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.