tdf#166813: improve pocheck script

* Check the number of opening and closing parentheses,
brackets and square brackets are the same
* Check {&DialogHeading} and {&DialogDefaultBold} are
at the beginning of the string.
the translation here
* Check [ProductName] is kept. It's just a warning
so pocheck doesn't remove the translation here

Change-Id: Ica06e22ec547375b84ed829da12178b5976b357c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187554
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>